module(
    name = "tools_worker",
    version = "1.0",
)

# declare maven first, to set a version for all
bazel_dep(
    name = "rules_jvm_external",
    version = "5.2",
)

single_version_override(
    module_name = "rules_jvm_external",
    patch_strip = 1,
    patches = ["//third_party:rules_jvm_external_5.2.patch"],
)

# required to ensure that maven is setup correctly.
# why? this happens: '@[unknown repo 'maven' requested from @protobuf~3.19.6]'
bazel_dep(
    name = "protobuf",
    version = "21.7",
    dev_dependency = True,
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "bazel",
    dev_dependency = True,
)

# Since bazel doesn't register in the repo, cheat.
archive_override(
    module_name = "bazel",
    strip_prefix = "bazel-7.0.0",
    urls = [
        "https://github.com/bazelbuild/bazel/archive/refs/tags/7.0.0.tar.gz",
    ],
)

# Fix the yanked version
single_version_override(
    module_name = "rules_go",
    version = "0.39.1",
)

# Stub out bazel non-modules
local_path_override(
    module_name = "remoteapis",
    path = "./third_party/remoteapis",
)

# Stub out bazel non-modules
local_path_override(
    module_name = "googleapis",
    path = "./third_party/googleapis",
)
